--- a/area/apps/konfig/service.yaml
+++ b/area/apps/konfig/service.yaml
@@ -7,60 +7,66 @@ spec:
   selector:
     matchLabels:
       app: konfig
-  replicas: 2
+  replicas: 3
   template:
     metadata:
       labels:
         app: konfig
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 3000
+        fsGroup: 2000
       volumes:
         - name: konfig-volume
           configMap:
             name: konfig-config
       containers:
-      - name: konfig
-        image: docker.io/alexfalkowski/konfig:v1.122.0
-        imagePullPolicy: Always
-        args: ["server"]
-        volumeMounts:
-          - name: konfig-volume
-            mountPath: /etc/konfig/server.yaml
-            subPath: server.yaml
-        env:
-          - name: KONFIG_CONFIG_FILE
-            value: "/etc/konfig/server.yaml"
-          - name: KONFIG_OTLP_KEY
-            valueFrom:
-              secretKeyRef:
-                name: otlp-secret
-                key: token
-          - name: KONFIG_GIT_TOKEN
-            valueFrom:
-              secretKeyRef:
-                name: gh-secret
-                key: token
-        ports:
-          - containerPort: 8080
-          - containerPort: 9090
-        livenessProbe:
-          httpGet:
-            path: /livez
-            port: 8080
-          initialDelaySeconds: 3
-          periodSeconds: 3
-        readinessProbe:
-          httpGet:
-            path: /readyz
-            port: 8080
-          initialDelaySeconds: 3
-          periodSeconds: 3
-        resources:
-          requests:
-            cpu: 125m
-            memory: 64Mi
-          limits:
-            cpu: 250m
-            memory: 128Mi
+        - name: konfig
+          image: docker.io/alexfalkowski/konfig:v1.122.0
+          imagePullPolicy: Always
+          args: ["server"]
+          volumeMounts:
+            - name: konfig-volume
+              mountPath: /etc/konfig/server.yaml
+              subPath: server.yaml
+          env:
+            - name: KONFIG_CONFIG_FILE
+              value: "/etc/konfig/server.yaml"
+            - name: KONFIG_OTLP_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: otlp-secret
+                  key: token
+            - name: KONFIG_GIT_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: gh-secret
+                  key: token
+          ports:
+            - containerPort: 8080
+            - containerPort: 9090
+          livenessProbe:
+            httpGet:
+              path: /livez
+              port: 8080
+            initialDelaySeconds: 3
+            periodSeconds: 3
+          readinessProbe:
+            httpGet:
+              path: /readyz
+              port: 8080
+            initialDelaySeconds: 3
+            periodSeconds: 3
+          resources:
+            requests:
+              cpu: 125m
+              memory: 64Mi
+            limits:
+              cpu: 250m
+              memory: 128Mi
+          securityContext:
+            allowPrivilegeEscalation: false
 ---
 apiVersion: v1
 kind: Service
