fix(apps): revert back to good state

--- a/area/apps/.kube-linter.yaml
+++ b/area/apps/.kube-linter.yaml
@@ -25,7 +25,7 @@ checks:
     - "invalid-target-ports"
     - "latest-tag"
     - "liveness-port"
-    - "minimum-three-replicas"
+    #- "minimum-three-replicas"
     - "mismatching-selector"
     #- "no-anti-affinity"
     - "no-extensions-v1beta"
@@ -45,7 +45,7 @@ checks:
     - "readiness-port"
     #- "required-annotation-email"
     #- "required-label-owner"
-    - "run-as-non-root"
+    #- "run-as-non-root"
     - "scc-deny-privileged-container"
     - "sensitive-host-mounts"
     - "ssh-port"
