--- a/area/apps/konfig/service.yaml
+++ b/area/apps/konfig/service.yaml
@@ -7,7 +7,7 @@ spec:
   selector:
     matchLabels:
       app: konfig
-  replicas: 3
+  replicas: 2
   template:
     metadata:
       labels:
@@ -60,13 +60,11 @@ spec:
             periodSeconds: 3
           resources:
             requests:
-              cpu: 0.1
+              cpu: 125m
               memory: 64Mi
             limits:
-              cpu: 0.2
+              cpu: 250m
               memory: 128Mi
-          securityContext:
-            allowPrivilegeEscalation: false
 ---
 apiVersion: v1
 kind: Service
