--- a/area/apps/standort/service.yaml
+++ b/area/apps/standort/service.yaml
@@ -7,16 +7,12 @@ spec:
   selector:
     matchLabels:
       app: standort
-  replicas: 3
+  replicas: 2
   template:
     metadata:
       labels:
         app: standort
     spec:
-      securityContext:
-        runAsUser: 1000
-        runAsGroup: 3000
-        fsGroup: 2000
       volumes:
         - name: konfig-volume
           configMap:
@@ -78,13 +74,11 @@ spec:
             periodSeconds: 3
           resources:
             requests:
-              cpu: 0.1
+              cpu: 125m
               memory: 64Mi
             limits:
-              cpu: 0.2
+              cpu: 250m
               memory: 128Mi
-          securityContext:
-            allowPrivilegeEscalation: false
 ---
 apiVersion: v1
 kind: Service
