--- a/area/apps/.kube-linter.yaml
+++ b/area/apps/.kube-linter.yaml
@@ -25,7 +25,7 @@ checks:
     - "invalid-target-ports"
     - "latest-tag"
     - "liveness-port"
-    #- "minimum-three-replicas"
+    - "minimum-three-replicas"
     - "mismatching-selector"
     #- "no-anti-affinity"
     - "no-extensions-v1beta"
