feat(apps): make sure we enable run-as-non-root

--- a/area/apps/.kube-linter.yaml
+++ b/area/apps/.kube-linter.yaml
@@ -45,7 +45,7 @@ checks:
     - "readiness-port"
     #- "required-annotation-email"
     #- "required-label-owner"
-    #- "run-as-non-root"
+    - "run-as-non-root"
     - "scc-deny-privileged-container"
     - "sensitive-host-mounts"
     - "ssh-port"
