--- a/area/apps/bezeichner/service.yaml
+++ b/area/apps/bezeichner/service.yaml
@@ -41,6 +41,10 @@ spec:
                 secretKeyRef:
                   name: otlp-secret
                   key: token
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
+            runAsUser: 10001
       containers:
         - name: bezeichner
           image: docker.io/alexfalkowski/bezeichner:v1.85.0
@@ -79,6 +83,10 @@ spec:
             limits:
               cpu: 250m
               memory: 128Mi
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
+            runAsUser: 10001
 ---
 apiVersion: v1
 kind: Service
