--- a/area/apps/konfig/service.yaml
+++ b/area/apps/konfig/service.yaml
@@ -13,10 +13,6 @@ spec:
       labels:
         app: konfig
     spec:
-      securityContext:
-        runAsUser: 1000
-        runAsGroup: 3000
-        fsGroup: 2000
       volumes:
         - name: konfig-volume
           configMap:
@@ -65,6 +61,10 @@ spec:
             limits:
               cpu: 250m
               memory: 128Mi
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
+            runAsUser: 10001
 ---
 apiVersion: v1
 kind: Service
