--- a/area/apps/standort/service.yaml
+++ b/area/apps/standort/service.yaml
@@ -41,6 +41,9 @@ spec:
                 secretKeyRef:
                   name: otlp-secret
                   key: token
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
       containers:
         - name: standort
           image: docker.io/alexfalkowski/standort:v2.83.0
@@ -79,6 +82,9 @@ spec:
             limits:
               cpu: 250m
               memory: 128Mi
+          securityContext:
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
 ---
 apiVersion: v1
 kind: Service
