--- a/area/apps/bezeichner/service.yaml
+++ b/area/apps/bezeichner/service.yaml
@@ -13,38 +13,37 @@ spec:
       labels:
         app: bezeichner
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 10001
+        runAsGroup: 3000
+        fsGroup: 2000
       volumes:
         - name: konfig-volume
           configMap:
             name: konfig-config
         - name: bezeichner-volume
-          hostPath:
-            path: /tmp/bezeichner
-            type: DirectoryOrCreate
+          emptyDir: {}
       initContainers:
         - name: bezeichner-init
           image: docker.io/alexfalkowski/konfig:v1.122.0
           args: ["client"]
           volumeMounts:
             - name: konfig-volume
-              mountPath: /tmp/konfig/client.yaml
+              mountPath: /etc/konfig/client.yaml
               subPath: client.yaml
             - name: bezeichner-volume
-              mountPath: /tmp/bezeichner
+              mountPath: /etc/bezeichner
           env:
             - name: KONFIG_CONFIG_FILE
-              value: "/tmp/konfig/client.yaml"
+              value: "/etc/konfig/client.yaml"
             - name: KONFIG_APP_CONFIG_FILE
-              value: "/tmp/bezeichner/server.yaml"
+              value: "/etc/bezeichner/server.yaml"
             - name: KONFIG_OTLP_KEY
               valueFrom:
                 secretKeyRef:
                   name: otlp-secret
                   key: token
-          securityContext:
-            allowPrivilegeEscalation: false
-            runAsNonRoot: true
-            runAsUser: 10001
       containers:
         - name: bezeichner
           image: docker.io/alexfalkowski/bezeichner:v1.85.0
@@ -52,10 +51,10 @@ spec:
           args: ["server"]
           volumeMounts:
             - name: bezeichner-volume
-              mountPath: /tmp/bezeichner
+              mountPath: /etc/bezeichner
           env:
             - name: BEZEICHNER_CONFIG_FILE
-              value: "/tmp/bezeichner/server.yaml"
+              value: "/etc/bezeichner/server.yaml"
             - name: BEZEICHNER_OTLP_KEY
               valueFrom:
                 secretKeyRef:
@@ -83,10 +82,6 @@ spec:
             limits:
               cpu: 250m
               memory: 128Mi
-          securityContext:
-            allowPrivilegeEscalation: false
-            runAsNonRoot: true
-            runAsUser: 10001
 ---
 apiVersion: v1
 kind: Service
