--- a/area/apps/konfig/service.yaml
+++ b/area/apps/konfig/service.yaml
@@ -66,6 +66,8 @@ spec:
             limits:
               cpu: 250m
               memory: 128Mi
+          securityContext:
+            readOnlyRootFilesystem: true
 ---
 apiVersion: v1
 kind: Service
