--- a/area/apps/standort/service.yaml
+++ b/area/apps/standort/service.yaml
@@ -44,6 +44,8 @@ spec:
                 secretKeyRef:
                   name: otlp-secret
                   key: token
+          securityContext:
+            readOnlyRootFilesystem: true
       containers:
         - name: standort
           image: docker.io/alexfalkowski/standort:v2.83.0
@@ -82,6 +84,8 @@ spec:
             limits:
               cpu: 250m
               memory: 128Mi
+          securityContext:
+            readOnlyRootFilesystem: true
 ---
 apiVersion: v1
 kind: Service
