feat(apps): set resources for initContainers

--- a/area/apps/.kube-linter.yaml
+++ b/area/apps/.kube-linter.yaml
@@ -43,8 +43,6 @@ checks:
     - "privileged-ports"
     #- "read-secret-from-env-var"
     - "readiness-port"
-    #- "required-annotation-email"
-    #- "required-label-owner"
     - "run-as-non-root"
     - "scc-deny-privileged-container"
     - "sensitive-host-mounts"
@@ -52,8 +50,8 @@ checks:
     - "startup-port"
     - "unsafe-proc-mount"
     - "unsafe-sysctls"
-    #- "unset-cpu-requirements"
-    #- "unset-memory-requirements"
+    - "unset-cpu-requirements"
+    - "unset-memory-requirements"
     - "use-namespace"
     - "wildcard-in-rules"
     - "writable-host-mount"
