--- a/area/apps/standort/service.yaml
+++ b/area/apps/standort/service.yaml
@@ -29,9 +29,12 @@ spec:
             name: konfig-config
         - name: standort-volume
           emptyDir: {}
+        - name: otlp-volume
+          secret:
+            secretName: otlp-secret
       initContainers:
         - name: standort-init
-          image: docker.io/alexfalkowski/konfig:v1.122.0
+          image: docker.io/alexfalkowski/konfig:v1.125.1
           args: ["client"]
           volumeMounts:
             - name: konfig-volume
@@ -39,16 +42,14 @@ spec:
               subPath: client.yaml
             - name: standort-volume
               mountPath: /etc/standort
+            - name: otlp-volume
+              mountPath: /etc/secrets/otlp
+              readOnly: true
           env:
             - name: KONFIG_CONFIG_FILE
               value: "/etc/konfig/client.yaml"
             - name: KONFIG_APP_CONFIG_FILE
               value: "/etc/standort/server.yaml"
-            - name: KONFIG_OTLP_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: otlp-secret
-                  key: token
           resources:
             requests:
               cpu: 125m
@@ -60,20 +61,18 @@ spec:
             readOnlyRootFilesystem: true
       containers:
         - name: standort
-          image: docker.io/alexfalkowski/standort:v2.83.0
+          image: docker.io/alexfalkowski/standort:v2.86.0
           imagePullPolicy: Always
           args: ["server"]
           volumeMounts:
             - name: standort-volume
               mountPath: /etc/standort
+            - name: otlp-volume
+              mountPath: /etc/secrets/otlp
+              readOnly: true
           env:
             - name: STANDORT_CONFIG_FILE
               value: "/etc/standort/server.yaml"
-            - name: STANDORT_OTLP_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: otlp-secret
-                  key: token
           ports:
             - containerPort: 8080
             - containerPort: 9090
