feat(apps): add service acccounts

--- a/area/apps/.kube-linter.yaml
+++ b/area/apps/.kube-linter.yaml
@@ -10,7 +10,7 @@ checks:
     - "dangling-networkpolicypeer-podselector"
     - "dangling-service"
     - "dangling-servicemonitor"
-    #- "default-service-account"
+    - "default-service-account"
     - "deprecated-service-account-field"
     - "docker-sock"
     - "drop-net-raw-capability"
@@ -31,7 +31,6 @@ checks:
     - "no-read-only-root-fs"
     - "no-readiness-probe"
     - "no-rolling-update-strategy"
-    - "non-existent-service-account"
     - "pdb-max-unavailable"
     - "pdb-min-available"
     - "privilege-escalation-container"
