--- a/area/apps/standort/service.yaml
+++ b/area/apps/standort/service.yaml
@@ -18,6 +18,7 @@ spec:
       labels:
         app: standort
     spec:
+      serviceAccountName: standort
       securityContext:
         runAsNonRoot: true
         runAsUser: 10001
