--- a/area/apps/bezeichner/service.yaml
+++ b/area/apps/bezeichner/service.yaml
@@ -1,3 +1,4 @@
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,6 +19,7 @@ spec:
       labels:
         app: bezeichner
     spec:
+      serviceAccountName: bezeichner
       securityContext:
         runAsNonRoot: true
         runAsUser: 10001
