--- a/area/apps/Makefile
+++ b/area/apps/Makefile
@@ -32,8 +32,15 @@ preview-namespace:
 update-namespace:
 	kubectl apply -f $(namespace) -n $(namespace)
 
+# Rollout a namespace.
+rollout-namespace:
+	kubectl rollout restart deployment/$(namespace) -n $(namespace)
+
 # Preview all apps.
 preview: preview-konfig preview-standort preview-bezeichner
 
 # Update all apps.
 update: update-konfig update-standort update-bezeichner
+
+# Rollout all apps.
+rollout: rollout-konfig rollout-standort rollout-bezeichner
