--- a/area/apps/standort/service.yaml
+++ b/area/apps/standort/service.yaml
@@ -36,6 +36,7 @@ spec:
       initContainers:
         - name: standort-init
           image: docker.io/alexfalkowski/konfig:v1.129.0
+          imagePullPolicy: IfNotPresent
           args: ["config"]
           volumeMounts:
             - name: konfig-volume
@@ -63,7 +64,7 @@ spec:
       containers:
         - name: standort
           image: docker.io/alexfalkowski/standort:v2.89.0
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           args: ["server"]
           volumeMounts:
             - name: standort-volume
