--- a/area/apps/bezeichner/service.yaml
+++ b/area/apps/bezeichner/service.yaml
@@ -23,7 +23,7 @@ spec:
       securityContext:
         runAsNonRoot: true
         runAsUser: 10001
-        runAsGroup: 3000
+        runAsGroup: 10001
         fsGroup: 2000
       volumes:
         - name: konfig-volume
@@ -37,7 +37,7 @@ spec:
       initContainers:
         - name: bezeichner-init
           image: docker.io/alexfalkowski/konfig:v1.129.0
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           args: ["config"]
           volumeMounts:
             - name: konfig-volume
@@ -65,7 +65,7 @@ spec:
       containers:
         - name: bezeichner
           image: docker.io/alexfalkowski/bezeichner:v1.91.0
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           args: ["server"]
           volumeMounts:
             - name: bezeichner-volume
