--- a/area/apps/konfig/service.yaml
+++ b/area/apps/konfig/service.yaml
@@ -22,7 +22,7 @@ spec:
       securityContext:
         runAsNonRoot: true
         runAsUser: 10001
-        runAsGroup: 3000
+        runAsGroup: 10001
         fsGroup: 2000
       volumes:
         - name: konfig-volume
@@ -37,7 +37,7 @@ spec:
       containers:
         - name: konfig
           image: docker.io/alexfalkowski/konfig:v1.129.0
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           args: ["server"]
           volumeMounts:
             - name: konfig-volume
