--- a/area/apps/.kube-linter.yaml
+++ b/area/apps/.kube-linter.yaml
@@ -31,6 +31,7 @@ checks:
     - "no-read-only-root-fs"
     - "no-readiness-probe"
     - "no-rolling-update-strategy"
+    - "non-existent-service-account"
     - "pdb-max-unavailable"
     - "pdb-min-available"
     - "privilege-escalation-container"
