--- a/area/apps/bezeichner/service.yaml
+++ b/area/apps/bezeichner/service.yaml
@@ -56,9 +56,11 @@ spec:
           resources:
             requests:
               cpu: 125m
+              ephemeral-storage: 1Gi
               memory: 64Mi
             limits:
               cpu: 250m
+              ephemeral-storage: 2Gi
               memory: 128Mi
           securityContext:
             readOnlyRootFilesystem: true
@@ -94,9 +96,11 @@ spec:
           resources:
             requests:
               cpu: 125m
+              ephemeral-storage: 1Gi
               memory: 64Mi
             limits:
               cpu: 250m
+              ephemeral-storage: 2Gi
               memory: 128Mi
           securityContext:
             readOnlyRootFilesystem: true
