--- a/area/apps/konfig/service.yaml
+++ b/area/apps/konfig/service.yaml
@@ -70,9 +70,11 @@ spec:
           resources:
             requests:
               cpu: 125m
+              ephemeral-storage: 1Gi
               memory: 64Mi
             limits:
               cpu: 250m
+              ephemeral-storage: 2Gi
               memory: 128Mi
           securityContext:
             readOnlyRootFilesystem: true
