--- a/area/apps/standort/service.yaml
+++ b/area/apps/standort/service.yaml
@@ -55,9 +55,11 @@ spec:
           resources:
             requests:
               cpu: 125m
+              ephemeral-storage: 1Gi
               memory: 64Mi
             limits:
               cpu: 250m
+              ephemeral-storage: 2Gi
               memory: 128Mi
           securityContext:
             readOnlyRootFilesystem: true
@@ -93,9 +95,11 @@ spec:
           resources:
             requests:
               cpu: 125m
+              ephemeral-storage: 1Gi
               memory: 64Mi
             limits:
               cpu: 250m
+              ephemeral-storage: 2Gi
               memory: 128Mi
           securityContext:
             readOnlyRootFilesystem: true
