--- a/area/apps/Makefile
+++ b/area/apps/Makefile
@@ -10,7 +10,7 @@ kube-linter:
 kube-score: kube-score-konfig kube-score-standort kube-score-bezeichner
 
 # Lint config.
-lint: kube-linter
+lint: kube-linter kube-score
 
 # Save kubeconfig.
 save-config:
@@ -42,7 +42,7 @@ rollout-namespace:
 
 # Run kube-score for a namespace.
 kube-score-namespace:
-	kube-score score $(namespace)/*.yaml
+	kube-score score --ignore-test pod-networkpolicy --ignore-test deployment-has-host-podantiaffinity $(namespace)/*.yaml
 
 # Preview all apps.
 preview: preview-konfig preview-standort preview-bezeichner
