feat(apps): add NetworkPolicy

--- a/area/apps/.kube-linter.yaml
+++ b/area/apps/.kube-linter.yaml
@@ -32,6 +32,7 @@ checks:
     - "no-readiness-probe"
     - "no-rolling-update-strategy"
     - "non-existent-service-account"
+    - "non-isolated-pod"
     - "pdb-max-unavailable"
     - "pdb-min-available"
     - "privilege-escalation-container"
