--- a/area/apps/konfig/config.yaml
+++ b/area/apps/konfig/config.yaml
@@ -9,11 +9,12 @@ data:
     client:
       v1:
         host: localhost:9090
-        user_agent: "Konfig/1.0"
-        timeout: 5s
         retry:
-          timeout: 10s
           attempts: 3
+          backoff: 100ms
+          timeout: 10s
+        timeout: 5s
+        user_agent: "Konfig/1.0"
     health:
       duration: 1s
       timeout: 1s
@@ -39,13 +40,17 @@ data:
     transport:
       http:
         port: 8080
-        user_agent: "Konfig/1.0"
         retry:
-          timeout: 2s
           attempts: 3
+          backoff: 100ms
+          timeout: 10s
+        timeout: 5s
+        user_agent: "Konfig/1.0"
       grpc:
         port: 9090
-        user_agent: "Konfig/1.0"
         retry:
-          timeout: 2s
           attempts: 3
+          backoff: 100ms
+          timeout: 10s
+        timeout: 5s
+        user_agent: "Konfig/1.0"
