feat(apps): update versions

--- a/area/apps/konfig/config.yaml
+++ b/area/apps/konfig/config.yaml
@@ -39,6 +39,7 @@ data:
         key: /etc/secrets/otlp/token
     transport:
       http:
+        mux: gateway
         port: 8080
         retry:
           attempts: 3
